force-app/main/default/objects/Question__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>For each &quot;application type&quot; we will have segregation based on a category.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>