force-app/main/default/objects/Question__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Order number, according to which, questions will show up on the UI.</description>
    <label>Order Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>