force-app/main/default/objects/Question__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the parent question.</description>
    <label>Parent Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>