force-app/main/default/objects/Question__c/fields/Previous_Question_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Question_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the previous version of the question.</description>
    <label>Previous Question Version</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questions (Previous Question Version)</relationshipLabel>
    <relationshipName>Questions1</relationshipName>
    <type>Lookup</type>
</CustomField>