force-app/main/default/objects/Question__c/fields/Question_Body__c.field-meta.xml
<CustomField>
    <fullName>Question_Body__c</fullName>
    <description>The body of the question statement.</description>
    <label>Question Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>