force-app/main/default/objects/Question__c/fields/Show_For__c.field-meta.xml
<CustomField>
    <fullName>Show_For__c</fullName>
    <description>After record type, this is the next level of filter. This is to segregate questions for all &quot;application types&quot;.</description>
    <label>Show For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>License Renewal</fullName>
            </value>
            <value>
                <fullName>Quality Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>