force-app/main/default/objects/Question__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>For each &quot;application type&quot; we will have segregation based on a category, followed by sub-category. This is optional.</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SubCategory1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>