force-app/main/default/objects/Question__c/fields/Triggering_Comment_Box_Value__c.field-meta.xml
<CustomField>
    <fullName>Triggering_Comment_Box_Value__c</fullName>
    <description>An answer which would trigger the comment box.</description>
    <label>Triggering Comment Box Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>