force-app/main/default/objects/Question__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>Version of current question.</description>
    <label>Version</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>